<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <import type="com.example.canvart.ui.challenges.ChallengesViewModel"/>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="ChallengesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".ui.challenges.ChallengesFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/Theme.Canvart"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Theme.Canvart" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cntFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:visibility="@{vm.filterCond ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <RadioGroup
                android:id="@+id/rdgFilterDifficult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/margin_2x"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rdgFilterMaterial">

                <RadioButton
                    android:id="@+id/rdbEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin"
                    android:text="@string/text_easy"
                    android:layout_marginEnd="@dimen/margin" />

                <RadioButton
                    android:id="@+id/rdbMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin"
                    android:text="@string/text_medium"
                    android:layout_marginEnd="@dimen/margin" />

                <RadioButton
                    android:id="@+id/rdbHard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hard"/>

                <RadioButton
                    android:id="@+id/rdbAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_all"/>

            </RadioGroup>

            <RadioGroup
                android:id="@+id/rdgFilterMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/margin_2x"
                app:layout_constraintTop_toBottomOf="@id/rdgFilterDifficult"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <RadioButton
                    android:id="@+id/rdbPencil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin"
                    android:text="@string/text_pencil"
                    android:layout_marginEnd="@dimen/margin" />

                <RadioButton
                    android:id="@+id/rdbPen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin"
                    android:text="@string/text_pen"
                    android:layout_marginEnd="@dimen/margin" />

                <RadioButton
                    android:id="@+id/rdbMarker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_marker"/>

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lstChallenges"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/cntFilter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/lblTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cntFilter"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/flbGoToChallenges"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/lstChallenges"
            app:layout_anchorGravity="bottom|right|end"
            android:src="@drawable/ic_add_light"
            android:layout_marginBottom="@dimen/margin_2x"
            android:layout_marginRight="@dimen/margin_2x"
            android:layout_marginEnd="@dimen/margin_2x"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>