<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.challenges.ChallengeDoneFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/Theme.Canvart"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Theme.Canvart" />

        <ImageView
            android:id="@+id/imgDrawing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:adjustViewBounds="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/lblDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/description_drawing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgDrawing" />

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_2x"
            app:layout_constraintLeft_toLeftOf="@id/lblDescription"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblDescription" />

        <TextView
            android:id="@+id/lblScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/score_drawing"
            app:layout_constraintLeft_toLeftOf="@id/lblDescription"
            app:layout_constraintTop_toBottomOf="@id/txtDescription" />

        <RatingBar
            android:id="@+id/rtScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/lblDescription"
            app:layout_constraintTop_toBottomOf="@id/lblScore" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginBottom="@dimen/margin_2x"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/abandon_drawing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_2x"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/submit_drawing"
            app:layout_constraintBottom_toBottomOf="@id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>